# SimpleBitcoinMiner

./: CMakeLists.txt  README.md
src/: Block.h  BlockHeader.h  CoinbaseTransaction.h  Hashing.cu  NetworkMessageTypes.h  cpu_sha256.h  main.cpp
